@startuml
class GetScreenProfileQueryHandler {
    + <<async>> Handle(request:GetScreenProfileQuery, cancellationToken:CancellationToken) : Task<ScreenProfileDto>
}
"IRequestHandler`2" "<GetScreenProfileQuery,ScreenProfileDto>" <|-- GetScreenProfileQueryHandler
GetScreenProfileQueryHandler ..> GetScreenProfileQuery: <<use>>
class GetScreenProfileQuery {
    + Id : int <<get>> <<set>>
}
"IRequest`1" "<ScreenProfileDto>" <|-- GetScreenProfileQuery
GetScreenProfileQueryHandler ..> ScreenProfileDto: <<use>>
class ScreenProfileDto {
    + Id : int <<get>> <<set>>
    + Name : string <<get>> <<set>>
    + Screens : List<ScreenDto> <<get>> <<set>>
}
ScreenProfileDto ..> ScreenDto: <<use>>
class ScreenDto {
    + Id : int <<get>> <<set>>
    + ScreenProfileId : int <<get>> <<set>>
}
class List {
...
}
ScreenProfileDto ..> List: <<use>>
class CancellationToken {
...
}
GetScreenProfileQueryHandler ..> CancellationToken: <<use>>
class Task {
...
}
GetScreenProfileQueryHandler ..> Task: <<use>>
@enduml